--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.5">
-    <title>SpaceFlow Pro • Sistema Corporativo de Reservas</title>
+    <title>IAT Pro • Sistema Corporativo de Reservas</title>
     
     <!-- Fonte e ícones -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -682,7 +682,7 @@
                                 <div style="background: linear-gradient(135deg, #2563eb, #3b82f6); width: 80px; height: 80px; border-radius: 24px; display: flex; align-items: center; justify-content: center; margin: 0 auto 24px;">
                                     <i class="fas fa-calendar-alt" style="font-size: 2.8rem; color: white;"></i>
                                 </div>
-                                <h1 style="font-size: 2.2rem; font-weight: 800; color: #0b1c33;">SpaceFlow</h1>
+                                <h1 style="font-size: 2.2rem; font-weight: 800; color: #0b1c33;">Instituto Água e Terra - IAT</h1>
                                 <p style="color: #64748b; margin-top: 12px;">Sistema corporativo de reservas</p>
                                 <p style="color: #3b82f6; margin-top: 8px; font-weight: 500;"><i class="fas fa-globe"></i> Acessível de qualquer rede</p>
                             </div>
