--- a/index.html
+++ b/index.html
@@ -626,8 +626,8 @@
 
         // ---------- ESTADO GLOBAL ----------
         let usuarios = JSON.parse(localStorage.getItem('spaceflow_usuarios')) || [
-            { id: 1, nome: "Admin Master", email: "admin@spaceflow.com", senha: "admin123", tipo: "admin", status: "ativo", avatar: "AM" },
-            { id: 2, nome: "Usuário Teste", email: "user@teste.com", senha: "123456", tipo: "usuario", status: "ativo", avatar: "UT" }
+            { id: 1, nome: "Admin Master", email: "engpaulogaspar@gmail.com", senha: "admin123", tipo: "admin", status: "ativo", avatar: "AM" },
+            { id: 2, nome: "Usuário Teste", email: "paulogasparginga2018@gmail.com", senha: "123456", tipo: "usuario", status: "ativo", avatar: "UT" }
         ];
 
         let espacos = JSON.parse(localStorage.getItem('spaceflow_espacos')) || ESPACOS_PREMIUM;
