--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
                                     </select>
                                 </div>
                                 <div id="adminCodeGroup" style="display: none; margin-bottom: 24px;">
-                                    <label style="font-weight: 600; display: block; margin-bottom: 8px;">Código Admin</label>
+                                    <label style="font-weight: 600; display: block; margin-bottom: 8px;"></label>
                                     <input type="password" id="adminCode" placeholder="ADMIN123" style="width: 100%; padding: 16px; border-radius: 20px; border: 1.5px solid #e2e8f0; font-family: 'Inter';">
                                 </div>
                                 <button onclick="cadastrarUsuario()" style="width: 100%; padding: 18px; background: #0b1c33; color: white; border: none; border-radius: 40px; font-weight: 700; font-size: 1.1rem; cursor: pointer;">
